# SVIDANKA

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: README.md
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/tests/: test_health.py
docs/: 01_Product_Vision.md  02_PRD.md  03_User_Stories.md  04_Use_Cases.md  05_Business_Rules.md  06_Domain_Model.md  07_Database_Design.md  08_API_Specification.md  09_System_Architecture.md  10_Deployment.md  11_Test_Strategy.md  12_Roadmap.md  13_UI_UX_Design.md
docs/adr/: ADR-000-template.md  ADR-001-technology-stack.md  ADR-002-database-choice.md  ADR-003-maps-provider.md  ADR-004-no-registration-mvp.md  ADR-005-admin-access.md
docs/meetings/: product-discovery-01.md
docs/mockups/: svidanka_mockup.html
frontend/: Dockerfile  README.md  package.json
frontend/src/: main.tsx
infrastructure/: README.md
infrastructure/grafana/: README.md
infrastructure/nginx/: nginx.conf
scripts/: README.md
tests/: README.md
